# kabutOS

./: .gitignore  Cargo.toml  Makefile  README.md  build-ubuntu.sh  build.sh  console.c  debug.gdb  debug.sh  demo.c  dummy.ext4  dump.c  dump.h  entry.S  functions.c  functions.h  install-dependencies.sh  kernel.c  linker.ld  readline.c  readline.h  run.sh  rundbg.sh  stdio.c  string.c  string.h  uart.c  uart.h
.cargo/: config  config.toml
.github/workflows/: build.yml
crusty-line/: Cargo.toml
crusty-line/src/: errors.rs  lib.rs  readline.rs
dratinit/: Cargo.toml  build.rs
dratinit/src/: crt.S  main.S  main.rs
embedded-line-edit/: Cargo.toml
embedded-line-edit/.cargo/: config.toml
embedded-line-edit/src/: lib.rs
krabby/: Cargo.toml  build.rs
krabby-abi/: Cargo.toml
krabby-abi/src/: error.rs  fs.rs  lib.rs  pid.rs  sys.rs
krabby/asm/: entry.S
krabby/c/: console.c  console.h  demo.h  dump.c  dump.h  foo.c  functions.c  kernel.c  panic.c  panic.h  readline.c  rust_helpers.c  stdio.c  stdio.h  string.c  string.h  uart.c  uart.h
krabby/src/: allocator.rs  ansi_codes.rs  asm.rs  c_functions.rs  console.rs  cpu.rs  driver.rs  entry.S  entry.rs  errors.rs  frame.rs  functions.rs  globals.rs  handlers.rs  helpers.rs  idle.rs  interrupts.rs  lib.rs  main.rs  mmu.rs  panic.rs  process.rs  readline.rs  scheduler.rs  serial.rs  syscalls.rs  task.S  test.rs  timer.rs  trap.S  trap.rs  uart.rs  util.rs
krabby/src/asm/: entry.S  macros.S  mod.rs  process.S  trap.S
krabby/src/drivers/: clint_timer.rs  dw_apb_uart.rs  mod.rs  ns16550.rs  plic.rs  sifive_uart.rs  virtio.rs
krabby/src/filesystem/: fat32.rs  mod.rs
krabby/src/userspace/: dratinit.rs  mod.rs
naming_shit/: names.md  pokemon.txt
page-alloc/: Cargo.toml
page-alloc/src/: lib.rs  record.rs
reference/: links.md  qemu-virt.dts
userspace/: Cargo.toml  linker.ld
userspace/dratinit/: Cargo.toml
userspace/dratinit/src/: crt.S  main.rs  shell.rs
userspace/gary/: Cargo.toml  build.rs
userspace/gary/src/: main.rs
userspace/kanto/: Cargo.toml
userspace/kanto/src/: allocator.rs  asm.S  crt.S  lib.rs  serial.rs  sys.rs
