[package]
name = "embedded-line-edit"
version = "0.0.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0-beta.6", default-features = false, features = ["from", "display"] }
ringbuffer = { version = "0.15.0", default-features = false }
utf8-parser = { version = "0.0.4", default-features = false }

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
std = ["utf8-parser/std"]
