[package]
name = "krabby"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
# Don't allow implicit unsafe operations in `unsafe fn`, so we don't do
# something unsafe without being aware of it. I'm told this will be a hard
# error in a future version of Rust
unsafe_op_in_unsafe_fn = "deny"

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display"] }
embedded-line-edit = { version = "0.0.0", path = "../embedded-line-edit", default-features = false }
# TODO: Switch to upstream when changes are merged
# upstream currently cannot pretty-print individual nodes
fdt = { git = "https://github.com/Property404/fdt", rev="5abb24aed8e5ae0ca4c0ed8a2510355c92ea7b8c", features = ["pretty-printing"] }
heapless = "0.8.0"
owo-colors = "4.0.0"
riscv = "0.11.0"
schmargs = { default-features = false, git = "https://github.com/Property404/schmargs", rev="c9598f31" }
utf8-parser = { version = "0.0.4", default-features = false }

[build-dependencies]
cc = "1.0.83"
