[package]
name = "krabby"
default-run = "krabby"
version = "0.0.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
# Don't allow implicit unsafe operations in `unsafe fn`, so we don't do
# something unsafe without being aware of it. I'm told this will be a hard
# error in a future version of Rust
unsafe_op_in_unsafe_fn = "deny"

[dependencies]
bilge = "0.2.0"
critical-section = "1.1.2"
derive_more = { version = "1.0.0-beta.6", default-features = false, features = ["from", "display"] }
embedded-line-edit = { path = "../embedded-line-edit", default-features = false }
enumn = "0.1.13"
# TODO: Switch to upstream when changes are merged
# upstream currently cannot pretty-print individual nodes
fdt = { git = "https://github.com/Property404/fdt", rev="5abb24aed8e5ae0ca4c0ed8a2510355c92ea7b8c", features = ["pretty-printing"] }
owo-colors = "4.0.0"
page-alloc = { path = "../page-alloc" }
riscv = { git = "https://github.com/Property404/riscv", branch="Property404/ssoft-fix", version = "0.11.0", features = [ "critical-section-single-hart", "s-mode" ] }
schmargs = { default-features = false, git = "https://github.com/Property404/schmargs", rev="b919fab", features = [ "alloc" ] }
spin = "0.9.8"
talc = { version = "4.2.0", default-features = false, features = [ "lock_api" ] }
utf8-parser = { version = "0.0.4", default-features = false }

[build-dependencies]
anyhow = "1.0.80"
elf = "0.7.4"
