[package]
name = "krabby"
default-run = "krabby"
version = "0.0.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
# Don't allow implicit unsafe operations in `unsafe fn`, so we don't do
# something unsafe without being aware of it. I'm told this will be a hard
# error in a future version of Rust
unsafe_op_in_unsafe_fn = "deny"

[dependencies]
bilge = "0.2.0"
crusty-line = { version = "0.1.0", path = "../crusty-line" }
derive_more = { version = "1.0.0-beta.6", default-features = false, features = [ "into", "from", "display"] }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", rev = "1aa43f755572c6848fd981eafd11c02a4825dd62", default-features = false, features = ["alloc"] }
# TODO: Switch to upstream when changes are merged
# upstream currently cannot pretty-print individual nodes
fdt = { git = "https://github.com/Property404/fdt", rev="5abb24aed8e5ae0ca4c0ed8a2510355c92ea7b8c", features = ["pretty-printing"] }
krabby-abi = { path = "../krabby-abi" }
owo-colors = "4.0.0"
page-alloc = { path = "../page-alloc" }
qemu-exit = { version = "3.0.2", optional = true }
riscv = { git = "https://github.com/Property404/riscv", branch="Property404/ssoft-fix", version = "0.11.0", features = [ "s-mode" ] }
schmargs = { default-features = false, git = "https://github.com/Property404/schmargs", rev="b919fab", features = [ "alloc" ] }
spin = "0.9.8"
talc = { version = "4.2.0", default-features = false, features = [ "lock_api" ] }
utf8-parser = { version = "0.0.4", default-features = false }
# Switch to crates.io when it's fixed
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece509c40f32c03378a7a037ef9863ed5deba7" }

[build-dependencies]
anyhow = "1.0.80"
elf = "0.7.4"

[features]
default = []
test = ["dep:qemu-exit"]
